--- a/Tabang-Hub/Tabang-Hub/Views/Message/Message.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Message/Message.cshtml
@@ -18,6 +18,20 @@ else
             padding-top: 70px;
             overflow-y: hidden;
         }
+
+        .message-container.sent .time-stamp {
+            font-size: 0.75rem;
+            color: #888;
+            margin-right: 10px;
+            vertical-align: bottom;
+        }
+
+        .message-container.received .time-stamp {
+            font-size: 0.75rem;
+            color: #888;
+            margin-left: 10px;
+            vertical-align: bottom;
+        }
     </style>
 }
 
