--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
@@ -142,9 +142,9 @@
                         <div class="search-container m-auto">
                             <div class="input-wrapper d-flex">
                                 <input type="text" id="search-input" placeholder="Search event" class="form-control" oninput="filterSuggestions()" onfocus="showSuggestions()" onblur="hideSuggestions()">
-                                <button class="btn btn-primary" id="search-button">
+                                @*<button class="btn btn-primary" id="search-button">
                                     <i class="fa fa-search"></i>
-                                </button>
+                                </button>*@
                             </div>
 
                             <!-- Suggestion Item with Online Image -->
@@ -169,13 +169,6 @@
                     }
 
                     <ul class="navbar-nav ms-auto align-items-center">
-                        @*<li class="nav-item">
-                                <a class="nav-link click-scroll" href="#top">Home</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_2">About</a>
-                            </li>*@
 
                         <!-- Notification Bell -->
                         <li class="nav-item me-3" style="margin-left: 15px;">
